# ChangeLog for xfce-base/libxfce4util
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Nov 2008; Christoph Mende <angelos@gentoo.org>
  libxfce4util-9999.ebuild:
  Add README.Kiosk to DOCS

  02 Dec 2007; Christoph Mende <angelos@gentoo.org>
  libxfce4util-9999.ebuild:
  Sync dependencies with the main tree

  08 Nov 2007; Christoph Mende <angelos@gentoo.org>
  libxfce4util-9999.ebuild:
  Don't block current modemlights

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
