@@ -1,13 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST libxfce4util-4.5.92.tar.bz2 393765 RMD160 eb77be94dfe26682a8c00ff0b1b65bd1c7472d4b SHA1 333865f93cdadc2523edd53879277e74ab3337f1 SHA256 6549590b0fa5081872dbdedbda7bd0b63b1bb85019b91b23bd615ce423c77d80
+EBUILD libxfce4util-4.5.92.ebuild 429 RMD160 256da75dac3651ebc260b0bae35974b28fba11e5 SHA1 1412174e281cbffc34371a9a14b45d11f9ccc4ea SHA256 812b068dfeb7aa2e16ee8cd518fa7cb5665a5ac8ccaec4efcb240125e7875510
 EBUILD libxfce4util-9999.ebuild 429 RMD160 256da75dac3651ebc260b0bae35974b28fba11e5 SHA1 1412174e281cbffc34371a9a14b45d11f9ccc4ea SHA256 812b068dfeb7aa2e16ee8cd518fa7cb5665a5ac8ccaec4efcb240125e7875510
-MISC ChangeLog 550 RMD160 7b15779f65098867c44c9f69e71641fb0bca0124 SHA1 fdf0c897bb3b12ec4b243a76ecd2f561de5e8e2f SHA256 ce1570754df764a953575e64a38a65b079fd307334dc7e28778c1395446ef0e1
+MISC ChangeLog 693 RMD160 d31a1fb2a5cf457d52d97f24de6fbf74cd6ecc0a SHA1 d451d23d33def095cd9d69249fd9c35c236a1caa SHA256 6a0ef322bcf71524689e6242150ac343c0521e2349f9822e04a091f497260110
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkXXhMACgkQKhnDs22gwa87mwCgo5iczQ3v8WXh7MCVJfKGnfNG
-Mt8AnjRCvybMMDJvKrc9hTenc847icGn
-=l/Sh
+iEYEARECAAYFAkkdthgACgkQKhnDs22gwa97RACg3eKQKTm7riRyry+a56bONDVC
+oZwAnjuYA98fqjggTZoNBNXvofLlPXMs
+=tDs9
 -----END PGP SIGNATURE-----
