@@ -1,0 +1,18 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI=1
+
+inherit xfce4
+
+xfce4_core
+
+DESCRIPTION="Basic utilities library"
+HOMEPAGE="http://www.xfce.org/projects/libraries"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+IUSE="debug"
+
+RDEPEND=">=dev-libs/glib-2.6:2"
+
+DOCS="AUTHORS ChangeLog NEWS README README.Kiosk THANKS TODO"
