@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*libxfce4util-4.5.92 (14 Nov 2008)
+
+  14 Nov 2008; Christoph Mende <angelos@gentoo.org>
+  +libxfce4util-4.5.92.ebuild:
+  Xfce-4.6 Beta 2 bump
+
   09 Nov 2008; Christoph Mende <angelos@gentoo.org>
   libxfce4util-9999.ebuild:
   Add README.Kiosk to DOCS
